LogicProcessor fix